# sapphire

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  EULA  README.md  entry.cpp  flash.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  crash-report.yml  feature-request.yml
.github/workflows/: build.yml  draft.yml
bindings/: GeometryDash.bro
cmake/: Platform.cmake  SapphireFile.cmake
codegen/: CMakeLists.txt
codegen/src/: AddressGen.cpp  BindingGen.cpp  Main.cpp  ModifyGen.cpp  SourceGen.cpp
installer/mac/: package.sh
installer/mac/Scripts/: postinstall
installer/windows/: installer.nsi
installer/windows/Language Files/: CzechExtra.nsh  EnglishExtra.nsh  FinnishExtra.nsh  PortugueseBRExtra.nsh  RussianExtra.nsh  SpanishExtra.nsh  SpanishInternationalExtra.nsh  SwedishExtra.nsh
loader/: CMakeLists.txt  README.md
loader/hash/: CMakeLists.txt
loader/include/Sapphire/: Bindings.hpp  DefaultInclude.hpp  Enums.hpp  Loader.hpp  Modify.hpp  Prelude.hpp
loader/include/Sapphire/c++stl/: gdlib.hpp  gdstdlib.hpp  gnustl-map.hpp  gnustl.hpp  msvcstl.hpp
loader/include/Sapphire/cocos/: CCDirector.h  CCScheduler.h
loader/include/Sapphire/cocos/base_nodes/: CCNode.h  Layout.hpp
loader/include/Sapphire/cocos/cocoa/: CCArray.h  CCGeometry.h  CCObject.h  CCString.h
loader/include/Sapphire/cocos/include/: ccTypes.h  cocos2d.h
loader/include/Sapphire/cocos/layers_scenes_transitions_nodes/: CCScene.h
loader/include/Sapphire/cocos/platform/: CCFileUtils.h  CCPlatformMacros.h
loader/include/Sapphire/cocos/platform/win32/: CCEGLView.h
loader/include/Sapphire/cocos/support/zip_support/: ZipUtils.h
loader/include/Sapphire/loader/: Dirs.hpp  Dispatch.hpp  Event.hpp  Hook.hpp  IPC.hpp  Index.hpp  Loader.hpp  Log.hpp  Mod.hpp  ModEvent.hpp  ModInfo.hpp  ModJsonTest.hpp  ModMetadata.hpp  Setting.hpp  SettingEvent.hpp  SettingJsonTest.hpp  SettingNode.hpp  Tulip.hpp  Types.hpp
loader/include/Sapphire/modify/: Addresses.hpp  AsStaticFunction.hpp  Comparer.hpp  Field.hpp  IDManager.hpp  Modify.hpp  Traits.hpp  Types.hpp
loader/include/Sapphire/platform/: ItaniumCast.hpp  android.hpp  cplatform.h  ios.hpp  macos.hpp  platform.hpp  windows.hpp
loader/include/Sapphire/ui/: BasedButton.hpp  BasedButtonSprite.hpp  ColorPickPopup.hpp  Colors.hpp  EnterLayerEvent.hpp  General.hpp  IconButtonSprite.hpp  InputNode.hpp  ListView.hpp  MDPopup.hpp  MDTextArea.hpp  Notification.hpp  Popup.hpp  SapphireUI.hpp  SceneManager.hpp  ScrollLayer.hpp  Scrollbar.hpp  SelectList.hpp  TextRenderer.hpp
loader/include/Sapphire/utils/: JsonValidation.hpp  MiniFunction.hpp  ObjcHook.hpp  Result.hpp  SeedValue.hpp  VersionInfo.hpp  addresser.hpp  casts.hpp  cocos.hpp  file.hpp  general.hpp  map.hpp  ranges.hpp  string.hpp  timer.hpp  web.hpp
loader/launcher/ios/: install.sh  main.cpp  pkg.py
loader/launcher/mac/: CMakeLists.txt
loader/launcher/windows/: CMakeLists.txt  Updater.cpp
loader/resources/: about.md  mod.json.in  support.md
loader/src/: load.cpp  load.hpp
loader/src/cocos2d-ext/: CCFileUtils.cpp  Layout.cpp  ZipUtils.cpp
loader/src/cocos2d-ext/zip/: ioapi.cpp
loader/src/hooks/: DynamicCastFix.cpp  LoadingLayer.cpp  MenuLayer.cpp  MessageBoxFix.cpp  PickupFix.cpp  SapphireNodeMetadata.cpp  TouchDispatcherFix.cpp  persist.cpp  save.cpp  update.cpp  updateResources.cpp
loader/src/ids/: AddIDs.hpp  CCTextInputNode.cpp  CreatorLayer.cpp  CustomSongWidget.cpp  CustomizeObjectLayer.cpp  EditLevelLayer.cpp  EditorPauseLayer.cpp  EditorUI.cpp  GJGarageLayer.cpp  IDManager.cpp  LevelBrowserLayer.cpp  LevelInfoLayer.cpp  LevelSearchLayer.cpp  LevelSettingsLayer.cpp  MenuLayer.cpp  PauseLayer.cpp  UILayer.cpp
loader/src/internal/: FileWatcher.hpp  about.hpp.in  crashlog.cpp  crashlog.hpp
loader/src/loader/: Dirs.cpp  Event.cpp  Hook.cpp  HookImpl.hpp  IPC.cpp  Index.cpp  Loader.cpp  LoaderImpl.cpp  LoaderImpl.hpp  Log.cpp  Mod.cpp  ModEvent.cpp  ModImpl.cpp  ModImpl.hpp  ModInfoImpl.cpp  ModInfoImpl.hpp  ModMetadataImpl.cpp  ModMetadataImpl.hpp  Patch.cpp  Setting.cpp  SettingNode.cpp  Tulip.cpp
loader/src/platform/: Objcpp.mm
loader/src/platform/android/: LoaderImpl.cpp  ModImpl.cpp  crashlog.cpp  main.cpp  util.cpp
loader/src/platform/ios/: LoaderImpl.cpp  ModImpl.cpp  main.cpp  util.mm
loader/src/platform/mac/: Cocos2d.cpp  LoaderImpl.mm  ModImpl.cpp  crashlog.mm  gdstdlib.cpp  main.mm  util.mm
loader/src/platform/windows/: LoaderImpl.cpp  ModImpl.cpp  crashlog.cpp  info.rc.in  main.cpp  nfdwin.cpp  nfdwin.hpp  util.cpp
loader/src/ui/internal/: SapphireUI.cpp
loader/src/ui/internal/dev/: HookListLayer.cpp  HookListLayer.hpp  HookListView.cpp  HookListView.hpp  HotReloadLayer.hpp
loader/src/ui/internal/info/: DevProfilePopup.cpp  DevProfilePopup.hpp  DownloadStatusNode.cpp  ModInfoPopup.cpp  ModInfoPopup.hpp  TagNode.cpp  TagNode.hpp
loader/src/ui/internal/list/: InstallListCell.cpp  InstallListCell.hpp  InstallListPopup.cpp  InstallListPopup.hpp  ModListCell.cpp  ModListCell.hpp  ModListLayer.cpp  ModListLayer.hpp  ProblemsListCell.cpp  ProblemsListCell.hpp  ProblemsListPopup.cpp  ProblemsListPopup.hpp  SearchFilterPopup.cpp  SearchFilterPopup.hpp
loader/src/ui/internal/settings/: ModSettingsPopup.cpp  ModSettingsPopup.hpp  SapphireSettingNode.cpp  SapphireSettingNode.hpp
loader/src/ui/nodes/: BasedButton.cpp  BasedButtonSprite.cpp  ColorPickPopup.cpp  Colors.cpp  EnterLayerEvent.cpp  General.cpp  IconButtonSprite.cpp  InputNode.cpp  ListView.cpp  MDPopup.cpp  MDTextArea.cpp  Notification.cpp  Popup.cpp  SceneManager.cpp  ScrollLayer.cpp  Scrollbar.cpp  TextRenderer.cpp
loader/src/utils/: JsonValidation.cpp  PlatformID.cpp  VersionInfo.cpp  addresser.cpp  cocos.cpp  file.cpp  string.cpp  time.cpp  web.cpp
loader/test/: shared.hpp
loader/test/dependency/: CMakeLists.txt  main.cpp  main.hpp  mod.json
loader/test/main/: CMakeLists.txt  main.cpp  mod.json
loader/test/members/: CMakeLists.txt  Common.hpp
